Updated Date formats to IST

--- a/StockManager/Views/Invoices/Details.cshtml
+++ b/StockManager/Views/Invoices/Details.cshtml
@@ -28,7 +28,7 @@
             <div class="form-group">
                 <h4>Date</h4>
                 <div>
-                    @(Model.created_on?.ToString("MM/dd/yyyy"))
+                    @(Model.created_on?.ToString("dd-MMM-yyyy"))
                 </div>
             </div>
         </div>
