--- a/StockManager/Views/Invoices/Create.cshtml
+++ b/StockManager/Views/Invoices/Create.cshtml
@@ -148,9 +148,11 @@
         $(document).ready(function () {
 
             $('#date_range').daterangepicker({
+                locale: {
+                    format: 'DD-MMM-YYYY'
+                },
                 "singleDatePicker": true,
-                "startDate": "@ViewBag.StartYear",
-                "endDate": "@ViewBag.EndYear",
+                "startDate": "@(DateTime.Now.ToString("dd-MMM-yyyy"))",
                 "minDate": "@ViewBag.StartYear",
                 "maxDate": "@ViewBag.EndYear"
             });
