--- a/StockManager/Views/Invoices/Index.cshtml
+++ b/StockManager/Views/Invoices/Index.cshtml
@@ -50,10 +50,10 @@
                     @Html.DisplayFor(modelItem => item.Vendor.VendorName)
                 </td>
                 <td>
-                    $ @Html.DisplayFor(modelItem => item.gross_amount)
+                    Rs @Html.DisplayFor(modelItem => item.gross_amount)
                 </td>
                 <td>
-                    $ @Html.DisplayFor(modelItem => item.net_amount)
+                    Rs @Html.DisplayFor(modelItem => item.net_amount)
                 </td>
                 <td>
                     @(item.created_on?.ToString("dd-MMM-yyyy"))
