--- a/StockManager/Views/PrintJobWorkReceived/Create.cshtml
+++ b/StockManager/Views/PrintJobWorkReceived/Create.cshtml
@@ -180,7 +180,7 @@
                     var $newRow = $('#productItemRow').clone().removeAttr('id');
 
                     $('.productId', $newRow).val($('#product').val());
-                    $('.productName', $newRow).text($('#product').text());
+                    $('.productName', $newRow).text($('#product option:selected').text());
                     $('.productQuantity', $newRow).text($('#quantity').val());
                     $('.productFold', $newRow).text($('#fold').val());
                     
